# LibEditor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro  release-key.properties
app/src/main/: AndroidManifest.xml
app/src/main/java/com/neomods/libeditor/: LibEditorApplication.kt  MainActivity.kt
app/src/main/java/com/neomods/libeditor/crash/: CrashActivity.kt  CrashHandler.kt  CrashReporter.kt
app/src/main/java/com/neomods/libeditor/domain/: ThemeMode.kt
app/src/main/java/com/neomods/libeditor/model/: Models.kt
app/src/main/java/com/neomods/libeditor/repository/: LibEditorRepository.kt
app/src/main/java/com/neomods/libeditor/service/: JniBridge.kt
app/src/main/java/com/neomods/libeditor/storage/: SettingsManager.kt
app/src/main/java/com/neomods/libeditor/viewmodel/: LibEditorViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: item_string.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
rust/: Cargo.toml
rust/src/: elf.rs  lib.rs  patch.rs  string.rs
(+19 files in other folders)
