[package]
name = "nelib_editor"
version = "0.3.0"
edition = "2021"

[lib]
name = "NeoLibEditor"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
goblin = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
